Fixed wrong font-color

--- a/src/app/components/general/embedly/Embedly.scss
+++ b/src/app/components/general/embedly/Embedly.scss
@@ -33,7 +33,7 @@
         padding-bottom: 8px;
     }
     .card-title{
-        @include var(color, default-color);
+        @include var(color, primary-text-color);
         display: flex;
         align-items: center;
         font-size: 1.2em;
